1. [新增] 新增了Cmd配置，用于设定指令工作目录 2. [版本] 1.2